[package]
name = "runtime-common"
version = "0.0.1"
authors = ["Phala Network"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }

parachain-primitives = { path = "../../primitives", package = "phala-parachain-primitives", default-features = false }

# Pallets
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-consensus-aura/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"parachain-primitives/std",
]
