[package]
name = "khala-parachain-runtime"
version = "0.0.1"
authors = ["Phala Network"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
hex-literal = { version = "0.3.1", optional = true }

runtime-common = { path = "../common", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "0.9.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", optional = true, default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", optional = true, default-features = false }

pallet-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-lottery = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-recovery = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "3.0.0", default-features = false }

# Cumulus dependencies
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", branch = "master", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus.git", branch = "master", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus.git", branch = "master", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus.git", branch = "master", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus.git", branch = "master", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus.git", branch = "master", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus.git", branch = "master", default-features = false }
cumulus-pallet-parachain-info = { git = "https://github.com/paritytech/cumulus.git", branch = "master", package = "parachain-info", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "master", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot.git", branch = "master", default-features = false}
xcm-builder = { git = "https://github.com/paritytech/polkadot.git", branch = "master", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot.git", branch = "master", default-features = false }
polkadot-pallet-xcm = { git = "https://github.com/paritytech/polkadot.git", branch = "master", package = "pallet-xcm", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master", version = "4.0.0"}

[features]
default = ["std", "include-wasm"]
include-wasm = []
runtime-benchmarks = [
	"hex-literal",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"polkadot-pallet-xcm/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
std = [
	"codec/std",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"sp-consensus-aura/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-parachain-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"polkadot-parachain/std",
	"polkadot-pallet-xcm/std",
	"runtime-common/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-utility/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-scheduler/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-treasury/std",
	"pallet-lottery/std",
	"pallet-membership/std",
	"pallet-recovery/std",
	"pallet-bounties/std",
	"pallet-democracy/std",
	"pallet-identity/std",
	"pallet-vesting/std",
]
